<!--
  ~ Copyright (c) 2018-2021 DJI
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<resources>
    <string name="dji_ux_sample_app_name">DJI UX Sample App</string>
    <string name="uxsdk_os_samples">DJI UXSDK Beta Sample App</string>
    <string name="no_product">No product connected</string>
    <string name="rc_calibration">RC Calibration</string>
    <string name="histogram">Histogram</string>
    <string name="toggle_widget_view">Toggle Widget View</string>
    <string name="toggle_list_view">Toggle List View</string>
    <string name="color_waveform">Color Waveform</string>
    <string name="video_source">Video Source</string>
    <string name="video_stream_source">Lens</string>
    <string name="assign_source">Assign Source</string>
    <string name="grid">Grid Settings</string>
    <string name="type">Type</string>
    <string name="grid_line_color">Line Color</string>
    <string name="grid_line_width">Line Width</string>
    <string name="center_point">Center Point Settings</string>
    <string name="center_point_color">Color</string>
    <string name="visibility">Visibility</string>
    <string name="orientation">Orientation</string>
    <string name="resize">Resize FPV</string>
    <string name="wsbridge_ip">WSBridge IP</string>
    <string name="sdk_version">Version: %1$s</string>
    <string name="product_name">Product Name: %1$s</string>
    <string name="remote_controller">Remote Controller Only</string>
    <string name="unregistered">Unregistered</string>
    <string name="registered">Registered</string>
    <string name="logs">Logs</string>
    <string name="showcase">Showcase</string>
    <string name="development">Development</string>
    <string name="widgets">Custom Widgets</string>
    <string name="widget_list">Widget List</string>
    <string name="default_layout">Default Layout</string>
    <string name="map">Map Module</string>
    <string name="core_widgets">Core Module</string>
    <string name="fpv_settings">Video Settings</string>
    <string name="hooks">Hooks</string>
    <string name="panels">Panels Activity</string>
    <string name="facebook_app_id">552267745197953</string>
    <string-array name="grid_line_type_array">
        <item>None</item>
        <item>Parallel</item>
        <item>Parallel/Diagonal</item>
    </string-array>
    <string-array name="fpv_source_array">
        <item>Auto</item>
        <item>Primary</item>
        <item>Secondary</item>
    </string-array>
    <string-array name="fpv_source_h20_array">
        <item>Wide</item>
        <item>Zoom</item>
    </string-array>
    <string-array name="fpv_source_h20t_array">
        <item>Wide</item>
        <item>Zoom</item>
        <item>Thermal</item>
    </string-array>
    <string-array name="orientation_array">
        <item>Landscape</item>
        <item>Portrait</item>
    </string-array>

    <string name="port_fpv">Port / FPV</string>
    <string name="starboard_fpv">Starboard / FPV</string>
    <string name="port_starboard">Port / Starboard</string>
    <string name="top_fpv">Top / FPV</string>
    <string name="port_top">Port / Top</string>
    <string name="starboard_top">Starboard / Top</string>

    <!--Map Widget Activity-->
    <string name="provider_google_maps">Google Maps</string>
    <string name="provider_here_maps">Here Maps</string>
    <string name="provider_amaps">AMaps</string>
    <string name="provider_mapbox">Mapbox</string>
    <string name="error_map_not_initialized">The map has not been initialized yet</string>
    <string name="home_direction">Home Direction</string>
    <string name="auto_frame">Auto Frame</string>
    <string name="unlock_flyzones">Unlock Fly Zones</string>
    <string name="show_flight_path">Show Flight Path</string>
    <string name="show_home_point">Show Home Point</string>
    <string name="show_gimbal_yaw">Show Gimbal Yaw</string>
    <string name="clear_flight_path">Clear Flight Path</string>
    <string name="replace_icon">Replace Icon</string>
    <string name="fly_zone">Fly Zone</string>
    <string name="fly_zone_legend">Fly Zone Legend</string>
    <string name="dji_account_indicator">DJI Account Login Indicator</string>
    <string name="all">All</string>
    <string name="auth">Authorization</string>
    <string name="warning">Warning</string>
    <string name="enhanced_warning">Enhanced Warning</string>
    <string name="restricted">Restricted</string>
    <string name="maximum_height">Maximum Height</string>
    <string name="self_unlocked">Self-Unlocked</string>
    <string name="custom_unlocked">Custom Unlocked</string>
    <string name="new_color">New Color</string>
    <string name="sync">Sync</string>
    <string name="map_settings">Map Settings</string>
    <string name="center_map">Center Map</string>
    <string name="map_overlay">Map Overlay</string>
    <string name="fly_zone_settings">Fly Zone Settings</string>
    <string name="flight_settings">Flight Settings</string>
    <string name="other_settings">Other Settings</string>
    <string name="icon_change_settings">Icon Change Settings</string>
    <string name="line_color_settings">Line Color Settings</string>
    <string name="marker_drag_started">Marker %1$d drag started</string>
    <string name="marker_drag_ended">Marker %1$d drag ended</string>
    <string name="marker_clicked">Marker %1$d clicked</string>
    <string name="pick_a_panel">Pick a Panel:</string>
    <string name="horizontal_top_bar_panel">Horizontal Top Bar Panel</string>
    <string name="sample_list_panel">Single List Panel</string>
    <string name="sample_list_panel_custom">Single List Panel - Custom</string>
    <string name="navigation_list_panel">Navigation List Panel</string>
    <string name="navigation_list_panel_custom">Navigation List Panel - Custom</string>
    <string-array name="iconArray">
        <item>Aircraft</item>
        <item>Home</item>
        <item>Gimbal Yaw</item>
        <item>Locked Zone</item>
        <item>Unlocked Zone</item>
    </string-array>
    <string-array name="mapTypeArray">
        <item>Standard</item>
        <item>Satellite</item>
        <item>Hybrid</item>
    </string-array>
    <string-array name="lineTypeArray">
        <item>Home Direction</item>
        <item>Flight Path</item>
        <item>Fly Zone Border</item>
    </string-array>

    <string name="designed_aspect_ratio">Designed Aspect Ratio: </string>
    <string name="current_widget_size">Current Widget Size: </string>
    <string name="pinch_to_resize">* Pinch to resize widget</string>

    <!-- Widget List Strings -->
    <string name="altitude_widget_title">Altitude Widget</string>
    <string name="auto_exposure_lock_widget_title">Auto Exposure Lock Widget</string>
    <string name="battery_widget_title">Battery Widget</string>
    <string name="camera_capture_widget_title">Camera Capture Widget</string>
    <string name="camera_config_aperture_widget_title">Camera Config Aperture Widget</string>
    <string name="camera_config_ev_widget_title">Camera Config EV Widget</string>
    <string name="camera_config_iso_widget_title">Camera Config ISO Widget</string>
    <string name="camera_config_shutter_widget_title">Camera Config Shutter Widget</string>
    <string name="camera_config_ssd_widget_title">Camera Config SSD Widget</string>
    <string name="camera_config_storage_widget_title">Camera Config Storage Widget</string>
    <string name="camera_config_wb_widget_title">Camera Config WB Widget</string>
    <string name="camera_controls_widget_title">Camera Controls Widget</string>
    <string name="camera_settings_menu_indicator_widget_title">Camera Settings Menu Indicator Widget</string>
    <string name="compass_widget_title">Compass Widget</string>
    <string name="telemetry_widget_title">Telemetry Panel</string>
    <string name="distance_home_widget_title">Distance Home Widget</string>
    <string name="distance_rc_widget_title">Distance RC Widget</string>
    <string name="exposure_settings_indicator_widget_title">Exposure Settings Indicator Widget</string>
    <string name="focus_exposure_switch_widget_title">Focus Exposure Switch Widget</string>
    <string name="focus_mode_widget_title">Focus Mode Widget</string>
    <string name="fpv_widget_title">FPV Widget</string>
    <string name="fpv_interaction_widget_title">FPV Interaction Widget</string>
    <string name="horizontal_velocity_widget_title">Horizontal Velocity Widget</string>
    <string name="record_video_widget_title">Record Video Widget</string>
    <string name="remote_control_signal_widget_title">Remote Control Signal Widget</string>
    <string name="photo_video_switch_widget_title">Photo Video Switch Widget</string>
    <string name="shoot_photo_widget_title">Shoot Photo Widget</string>
    <string name="simulator_indicator_control_widgets_title">Simulator Indicator and Control Widgets</string>
    <string name="system_status_panel_title">System Status Panel</string>
    <string name="system_status_widget_title">System Status Widget</string>
    <string name="top_bar_panel_title">Top Bar Panel</string>
    <string name="user_account_login_widget_title">User Account Login Widget</string>
    <string name="vertical_velocity_widget_title">Vertical Velocity Widget</string>
    <string name="vision_widget_title">Vision Widget</string>
    <string name="vps_widget_title">VPS Widget</string>
    <string name="flight_mode_widget_title">Flight Mode Widget</string>
    <string name="video_signal_widget_title">Video Signal Widget</string>
    <string name="gps_signal_widget_title">GPS Signal Widget</string>
    <string name="air_sense_widget_title">Air Sense Widget</string>
    <string name="connection_widget_title">Connection Widget</string>
    <string name="rtk_widget_title">RTK Widget</string>
    <string name="rtk_enabled_widget_title">RTK Enabled Widget</string>
    <string name="rtk_satellite_status_widget_title">RTK Satellite Status Widget</string>
    <string name="remaining_flight_time_widget_title">Remaining Flight Time Widget</string>

</resources>
