<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018-2019 DJI
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <CheckBox
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textColor="@color/dark_gray" />

        <CheckBox
            android:id="@+id/auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/all"
            android:text="@string/auth"
            android:textColor="@color/dark_gray" />

        <Button
            android:id="@+id/auth_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/auth"
            android:layout_alignParentRight="true"
            android:background="@color/uxsdk_zone_authorization"
            android:text="@string/new_color" />

        <CheckBox
            android:id="@+id/warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/auth"
            android:text="@string/warning"
            android:textColor="@color/dark_gray" />

        <Button
            android:id="@+id/warning_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/warning"
            android:layout_alignParentRight="true"
            android:background="@color/uxsdk_zone_warning"
            android:text="@string/new_color" />

        <CheckBox
            android:id="@+id/enhanced_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/warning"
            android:text="@string/enhanced_warning"
            android:textColor="@color/dark_gray" />

        <Button
            android:id="@+id/enhanced_warning_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/enhanced_warning"
            android:layout_alignParentRight="true"
            android:background="@color/uxsdk_zone_warning_enhanced"
            android:text="@string/new_color" />

        <CheckBox
            android:id="@+id/restricted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enhanced_warning"
            android:text="@string/restricted"
            android:textColor="@color/dark_gray" />

        <Button
            android:id="@+id/restricted_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/restricted"
            android:layout_alignParentRight="true"
            android:background="@color/uxsdk_zone_restricted"
            android:text="@string/new_color" />

        <TextView
            android:id="@+id/max_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/restricted"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/maximum_height"
            android:textColor="@color/uxsdk_zone_altitude" />

        <Button
            android:id="@+id/max_height_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/max_height"
            android:layout_alignParentRight="true"
            android:background="@color/black"
            android:text="@string/new_color" />

        <TextView
            android:id="@+id/self_unlocked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/max_height"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="4dp"
            android:text="Self Unlocked"
            android:textColor="@color/dark_gray" />

        <Button
            android:id="@+id/self_unlock_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/self_unlocked"
            android:layout_alignParentRight="true"
            android:background="@color/uxsdk_unlocked_border"
            android:text="@string/new_color" />

        <View
            android:id="@+id/custom_unlock_separator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/self_unlocked"
            android:layout_margin="5dp"
            android:background="@color/blue" />

        <Switch
            android:id="@+id/custom_unlock_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/custom_unlock_separator"
            android:layout_margin="5dp"
            android:text="@string/custom_unlocked"
            android:textColor="@color/dark_gray" />

        <Button
            android:id="@+id/custom_unlock_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/custom_unlock_switch"
            android:background="@color/light_gray"
            android:enabled="false"
            android:text="@string/new_color" />

        <Button
            android:id="@+id/custom_unlock_sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/custom_unlock_switch"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/custom_unlock_color"
            android:background="@color/light_gray"
            android:enabled="false"
            android:text="@string/sync" />

        <View
            android:id="@+id/custom_unlock_separator2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/custom_unlock_color"
            android:layout_margin="5dp"
            android:background="@color/blue" />
    </RelativeLayout>

</merge>